--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <script>document.write('<base href="' + document.location + '" />');</script>
   <meta charset="utf-8">
   <title>MyApp</title>
   <base href="/">
