--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,11 @@
       href="https://unpkg.com/primeflex@3.1.0/primeflex.css"
       crossorigin="anonymous"
     />
+    <!--<script
+      src="https://checkout.stripe.com/checkout.js"
+      defer
+      crossorigin="anonymous"
+    ></script>-->
   </head>
 
   <body>
